--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ivuorinen/markdownlint-config",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "type": "module",
   "description": "ivuorinen's shareable configuration for markdownlint.",
   "author": {
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ivuorinen/base-configs-markdownlint.git"
+    "url": "git+https://github.com/ivuorinen/base-configs-markdownlint.git"
   },
   "scripts": {
     "postinstall": "node scripts/postinstall.cjs"
