--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "devDependencies": {
     "@ivuorinen/eslint-config": "^0.5.13",
     "@ivuorinen/prettier-config": "^0.3.12",
-    "@ivuorinen/semantic-release-config": "^0.3.18"
+    "@ivuorinen/semantic-release-config": "^0.3.18",
+    "@types/supports-color": "^10.0.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.12.0"
 }
