--- a/.github/workflows/pr-lint.yml
+++ b/.github/workflows/pr-lint.yml
@@ -21,6 +21,7 @@ jobs:
       statuses: write
       contents: read
       packages: read
+      pull-requests: write
 
     steps:
       - name: Checkout
