--- a/package.json
+++ b/package.json
@@ -34,24 +34,11 @@
     "url": "git+https://github.com/ivuorinen/base-configs-markdownlint.git"
   },
   "scripts": {
-    "postinstall": "node scripts/postinstall.cjs",
-    "eslint:fix": "eslint '**/*.{js,tsx,ts,mjs,cjs}' --fix",
-    "eslint:report": "eslint '**/*.{js,tsx,ts,mjs,cjs}'",
-    "markdownlint:fix": "markdownlint '**/*.md' --fix",
-    "markdownlint:report": "markdownlint '**/*.md'",
-    "prettier:fix": "prettier '**/*.{js,tsx,ts,json,mjs,cjs}' --write",
-    "prettier:report": "prettier '**/*.{js,tsx,ts,json,mjs,cjs}' --check"
+    "postinstall": "node scripts/postinstall.cjs"
   },
   "dependencies": {
-    "@ivuorinen/config-checker": "^1.1.12",
+    "@ivuorinen/config-checker": "^2.1.1",
     "markdownlint-cli": "^0.46.0"
-  },
-  "gitHead": "23d15f15743fb59c1dbe658615ef2ed51c54d230",
-  "devDependencies": {
-    "@ivuorinen/eslint-config": "^0.5.13",
-    "@ivuorinen/prettier-config": "^0.3.12",
-    "@ivuorinen/semantic-release-config": "^0.3.18",
-    "@types/supports-color": "^10.0.0"
   },
   "packageManager": "yarn@4.12.0"
 }
