--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "postinstall": "node scripts/postinstall.cjs"
   },
   "dependencies": {
-    "@ivuorinen/config-checker": "^1.1.12",
+    "@ivuorinen/config-checker": "^2.1.1",
     "markdownlint-cli": "^0.46.0"
   },
-  "gitHead": "23d15f15743fb59c1dbe658615ef2ed51c54d230"
+  "packageManager": "yarn@4.12.0"
 }
