--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "@ivuorinen/config-checker": "^2.1.1",
     "markdownlint-cli": "^0.46.0"
   },
-  "packageManager": "yarn@4.12.0"
+  "packageManager": "yarn@4.12.0",
+  "devDependencies": {
+    "@ivuorinen/semantic-release-config": "^1.0.0"
+  }
 }
